@@ -7,6 +7,7 @@
  * Description : simple viewer export settings container.
  *
  * Copyright (C) 2008-2011 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ * Copyright (C) 2011 by Veaceslav Munteanu <slavuttici@gmail.com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -121,6 +122,7 @@ public:
     bool                         showComments;
     bool                         fixOrientation;
     bool                         openInKonqueror;
+    bool                         showKeywords;
 
     int                          imagesExportSize;
     int                          maxImageDimension;
