@@ -8,6 +8,7 @@
  *
  * Copyright (C) 2005-2006 by Joern Ahrens <joern dot ahrens at kdemail dot net>
  * Copyright (C) 2008-2011 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ * Copyright (C) 2011 by Veaceslav Munteanu <slavuttici@gmail.com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -255,7 +256,7 @@ void SVEDialog::readSettings()
     d->settings.enableRightClickOpen = group.readEntry("EnableRightClickOpen", false);
     d->settings.fixOrientation       = group.readEntry("FixOrientation", true);
     d->settings.openInKonqueror      = group.readEntry("OpenInKonqueror", true);
-
+    d->settings.showKeywords         = group.readEntry("ShowKeywords", true);
     d->generalPage->setSettings(d->settings);
     d->lookPage->setSettings(d->settings);
 
@@ -291,7 +292,7 @@ void SVEDialog::saveSettings()
     group.writeEntry("EnableRightClickOpen", d->settings.enableRightClickOpen);
     group.writeEntry("FixOrientation", d->settings.fixOrientation);
     group.writeEntry("OpenInKonqueror", d->settings.openInKonqueror);
-
+    group.writeEntry("ShowKeywords", d->settings.showKeywords);
     KConfigGroup group2 = config.group(QString("FlashExport Dialog"));
     group2.writeEntry("FlashExport Page", activePageIndex());
     saveDialogSize(group2);
